# modern-cpp-utility

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
util/: CMakeLists.txt
util/include/util/: TimeSplitter.hpp
util_tests/: CMakeLists.txt
util_tests/include/: TestUtilities.hpp
util_tests/src/: Test_TimeSplitter.cpp  TimeSplitter_CompileTimeSuite.cpp
